[gd_scene load_steps=4 format=3 uid="uid://n3ycgym14tvw"]

[ext_resource type="Script" uid="uid://c4s2623e45bn3" path="res://scenes/ui/options_menu.gd" id="1_imaij"]
[ext_resource type="Theme" uid="uid://cnveursukjnnk" path="res://theme/theme.tres" id="1_wj2x4"]
[ext_resource type="Script" uid="uid://b6th40bbhl4o1" path="res://scripts/ui/animation_component.gd" id="2_imaij"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_imaij")

[node name="InnerMenu" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wj2x4")
theme_type_variation = &"GameMenuPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="InnerMenu"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="InnerMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HBoxContainer2" type="HBoxContainer" parent="InnerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Options"

[node name="OptionsCloseButton" type="Button" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"GameMenuButton"
text = "X"

[node name="AnimationComponent2" type="Node" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer2/OptionsCloseButton"]
script = ExtResource("2_imaij")
metadata/_custom_type_script = "uid://b6th40bbhl4o1"

[node name="HBoxContainer" type="HBoxContainer" parent="InnerMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Master volume"

[node name="MasterVolumeSlider" type="HSlider" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(213, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_type_variation = &"MenuSlider"
max_value = 1.0
step = 0.001
value = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Music volume"

[node name="MusicVolumeSlider" type="HSlider" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(213, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_type_variation = &"MenuSlider"
max_value = 1.0
step = 0.001

[node name="HBoxContainer3" type="HBoxContainer" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "SFX volume"

[node name="SFXVolumeSlider" type="HSlider" parent="InnerMenu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(213, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_type_variation = &"MenuSlider"
max_value = 1.0
step = 0.001
